--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
     "@nestjs/config": "^2.0.0",
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
+    "@nestjs/testing": "^8.4.5",
     "@nestjs/typeorm": "^8.0.3",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
